--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
   }
 
   html, body {
-    height: 100%;
-    margin: 0;
-    background: linear-gradient(160deg, var(--beige), var(--maroon));
-    color: #222;
+   height: 100%;
+   margin: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background: linear-gradient(160deg, var(--beige), var(--maroon));
+   color: #222;
   }
 
   .wrap {
@@ -135,23 +138,33 @@
 
   /* password modal */
   .pw-modal {
-    position: fixed;
-    inset: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(10,10,10,0.45);
-    z-index: 80;
-  }
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(10,10,10,0.45);
+  z-index: 80;
+
+   animation: fadeIn 6.0s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
 
   .pw-card {
-    width: min(560px, 92vw);
-    background: white;
-    border-radius: 14px;
-    padding: 22px;
-    text-align: center;
-    box-shadow: 0 18px 50px rgba(0,0,0,0.35);
-  }
+  width: min(560px, 92vw);
+  background: white;
+  border-radius: 14px;
+  padding: 22px;
+  text-align: center;
+  box-shadow: 0 18px 50px rgba(0,0,0,0.35);
+  margin: 0 auto;
+}
+
 
   .pw-card h3 {
     margin: 0 0 6px;
@@ -160,14 +173,9 @@
   }
 
   .pw-input {
-    width: 100%;
-    padding: 12px;
-    border-radius: 10px;
-    border: 2px solid #e6c7b1;
-    outline: none;
-    font-size: 16px;
-    margin-top: 12px;
-    text-align: center;
+  display: block;
+  margin: 12px auto;
+}
   }
 
   .pw-row {
@@ -202,7 +210,7 @@
 <div class="wrap" id="mainWrap">
   <header>
     <div class="title">Happy Birthday Gracelle 🎉</div>
-    <div class="subtitle">A special gift for you po</div>
+    <div class="subtitle">A small gift for you po :></div>
   </header>
 
   <main class="card">
