Add alt attribute to image and update audio tag

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   <main class="card">
     <div class="photo-wrap">
       <div class="photo">
-        <img id="portrait" src="gracelle.jpg">
+        <img id="portrait" src="gracelle.jpg" alt="Gracelle">
       </div>
       <div class="photo-label">Gracelle Dequilla</div>
     </div>
@@ -227,8 +227,8 @@
         <!-- You can write your message directly here inside the code -->
       </p>
 
-      <audio id="song" controls>
-        <source src="gracelle.MP3">
+      <audio controls>
+        <source src="gracelle.MP3" type="mpeg">
       </audio>
     </div>
   </main>
