--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
         <!-- You can write your message directly here inside the code -->
       </p>
 
-      <audio controls>
-        <source src="gracelle.MP3" type="mpeg">
+      <audio id="song" controls>
+        <source src="gracelle.MP3">
       </audio>
     </div>
   </main>
