Refactor birthday page HTML and styles
Updated the HTML structure and styles for the birthday page, including changes to the password modal and main content display.

--- a/b day/Happy Birthday.html
+++ b/b day/Happy Birthday.html
@@ -216,7 +216,7 @@
   <main class="card">
     <div class="photo-wrap">
       <div class="photo">
-        <img id="portrait" src="gracelle.jpg" alt="Gracelle">
+       <img id="portrait" src="gracelle.jpg">
       </div>
       <div class="photo-label">Gracelle Dequilla</div>
     </div>
@@ -227,9 +227,9 @@
         <!-- You can write your message directly here inside the code -->
       </p>
 
-      <audio id="song" controls>
-        <source src="gracelle.MP3">
-      </audio>
+     <audio autoplay loop>
+  <source src="gracelle.MP3" type="audio/mpeg">
+</audio>
     </div>
   </main>
 </div>
@@ -275,3 +275,4 @@ window.addEventListener("load", () => pwInput.focus());
 
 </body>
 </html>
+
