--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 
     <div class="content">
-      <h2>Happy Happy Birthday po!</h2>
+      <h2>Happy Happy Birthday po!hwhw</h2>
       <p id="birthdayMessage">
         <!-- You can write your message directly here inside the code -->
       </p>
