--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   <main class="card">
     <div class="photo-wrap">
       <div class="photo">
-        <img id="portrait" src="gracelle.jpg" alt="Gracelle">
+       <img id="portrait" src="b%20day/gracelle.jpg" alt="Gracelle">
       </div>
       <div class="photo-label">Gracelle Dequilla</div>
     </div>
@@ -227,9 +227,9 @@
         <!-- You can write your message directly here inside the code -->
       </p>
 
-      <audio id="song" controls>
-        <source src="gracelle.MP3">
-      </audio>
+     <audio controls autoplay loop>
+  <source src="b%20day/gracelle.MP3" type="audio/mpeg">
+</audio>
     </div>
   </main>
 </div>
