--- a/b day/Happy Birthday.html
+++ b/b day/Happy Birthday.html
@@ -216,7 +216,7 @@
   <main class="card">
     <div class="photo-wrap">
       <div class="photo">
-       <img id="portrait" src="gracelle.jpg">
+       <img id="portrait" src="b%20day/gracelle.jpg" alt="Gracelle">
       </div>
       <div class="photo-label">Gracelle Dequilla</div>
     </div>
@@ -226,9 +226,9 @@
       <p id="birthdayMessage">
         <!-- You can write your message directly here inside the code -->
       </p>
-
-     <audio autoplay loop>
-  <source src="gracelle.MP3" type="audio/mpeg">
+      
+   <audio controls autoplay loop>
+  <source src="b%20day/gracelle.MP3" type="audio/mpeg">
 </audio>
     </div>
   </main>
@@ -275,4 +275,5 @@ window.addEventListener("load", () => pwInput.focus());
 
 </body>
 </html>
+
 
