--- a/b day/Happy Birthday.html
+++ b/b day/Happy Birthday.html
@@ -223,8 +223,9 @@
 
     <div class="content">
       <h2>Happy Happy Birthday po!</h2>
-      <p id="birthdayMessage">
-        <!-- You can write your message directly here inside the code -->
+      <p id="Happy 19th Birthday Gracelle!!! 🩵🎉🎉
+
+Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!">
       </p>
       
    <audio controls autoplay loop>
@@ -275,5 +276,6 @@ window.addEventListener("load", () => pwInput.focus());
 
 </body>
 </html>
+
 
 
