--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
 
     <div class="content">
       <h2>Happy Happy Birthday po!</h2>
-      <p id="birthdayMessage">
-        <Happy 19th Birthday Gracelle!!! 🩵🎉🎉
-Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!>
+      <p id="Happy 19th Birthday Gracelle!!! 🩵🎉🎉
+
+Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!">
+      
       </p>
       
    <audio controls autoplay loop>
