--- a/index.html
+++ b/index.html
@@ -227,9 +227,11 @@
    <audio controls autoplay loop>
   <source src="b%20day/gracelle.MP3" type="audio/mpeg">
 </audio>
-        <p id="Happy 19th Birthday Gracelle!!! 🩵🎉🎉
-Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!">
-      </p>
+      <p class="message">
+  Happy 19th Birthday Gracelle!!! 🩵🎉🎉
+
+Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!
+  </p>
     </div>
   </main>
 </div>
