--- a/b day/Happy Birthday.html
+++ b/b day/Happy Birthday.html
@@ -227,11 +227,11 @@
    <audio controls autoplay loop>
   <source src="b%20day/gracelle.MP3" type="audio/mpeg">
 </audio>
-      <p class="message">
+      <h3 class="message">
   Happy 19th Birthday Gracelle!!! 🩵🎉🎉
 
 Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!
-  </p>
+  </h3>
     </div>
   </main>
 </div>
@@ -277,6 +277,7 @@ window.addEventListener("load", () => pwInput.focus());
 
 </body>
 </html>
+
 
 
 
