Refactor HTML structure and styles for birthday page

--- a/b day/Happy Birthday.html
+++ b/b day/Happy Birthday.html
@@ -188,6 +188,14 @@
   @media (max-width:900px){
     .card{grid-template-columns:1fr;max-width:720px}
     .photo{width:90%;height:360px}
+
+    .message {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #fff;
+  text-align: center;
+}
+
   }
 </style>
 </head>
@@ -277,6 +285,7 @@ window.addEventListener("load", () => pwInput.focus());
 
 </body>
 </html>
+
 
 
 
