--- a/b day/Happy Birthday.html
+++ b/b day/Happy Birthday.html
@@ -235,11 +235,9 @@
    <audio controls autoplay loop>
   <source src="b%20day/gracelle.MP3" type="audio/mpeg">
 </audio>
-      <h3 class="message">
-  Happy 19th Birthday Gracelle!!! 🩵🎉🎉
-
-Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!
-  </h3>
+      <h3> Happy 19th Birthday Gracelle!!! 🩵🎉🎉
+           Ingatan at samahan nawa palagi
+           sa pagganap ng tungkulin te!</h3>
     </div>
   </main>
 </div>
@@ -285,6 +283,7 @@ window.addEventListener("load", () => pwInput.focus());
 
 </body>
 </html>
+
 
 
 
