--- a/index.html
+++ b/index.html
@@ -227,11 +227,9 @@
    <audio controls autoplay loop>
   <source src="b%20day/gracelle.MP3" type="audio/mpeg">
 </audio>
-      <p class="message">
-  Happy 19th Birthday Gracelle!!! 🩵🎉🎉
-
-Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!
-  </p>
+      <h3>Happy 19th Birthday Gracelle!!! 🩵🎉🎉
+Ingatan at samahan nawa palagi sa pagganap ng tungkulin te!</h3>
+  
     </div>
   </main>
 </div>
